@@ -2,6 +2,10 @@ This file is only intended for the CVS.
 It should contain a brief description of new features;
 in some way an extension to the changelog.
 ------------------------------------------------------
+krusader has now a new toolbar: actions toolbar. you can show/hide it using
+the view menu --> show actions toolbar. useful to put actions (and later bookmarks),
+put in as a side toolbar with small icons. __you'll have to overwrite krusaderui.rc__
+
 color scheme can now be imported/exported. reacable in the colors page
 in konfigurator
 
