@@ -1,3 +1,5 @@
+    ADDED: new toolbar for actions. use view->show actions toolbar. you'll need to 
+           remove ~/.kde/share/apps/krusaderui.rc to see it
     UPDATED: remoteman was disabled. from now on, bookmark manager only
     ADDED: refresh-in-the-background for remote urls and for archives
     ADDED: changing the coloumns by right clicking on the panel's header
